test/errors/lexer/token_string.ms
s = "Hello
world!"
// Tokenization Error (Line 1, Column 11): Unterminated string
